--- a/src/main/resources/templates/kaohe/lastTestScore.html
+++ b/src/main/resources/templates/kaohe/lastTestScore.html
@@ -1,242 +1,237 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-	<head>
-		<meta charset="UTF-8">
-		<title>测试成绩管理</title>
-		<meta name="renderer" content="webkit">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<link rel="stylesheet" href="../../static/css/layui.css" media="all">
-		<link rel="stylesheet" type="text/css" href="../../static/css/page.css"/>
-		<link rel="stylesheet" type="text/css" href="../../static/css/code.css"/>
-		<link rel="stylesheet" type="text/css" href="../../static/css/bootstrap.min.css"/>
-		<style>
-			.layui-form-label{
-				width: 100px;
-			}
-			.text-overflow {
-				display:block;/*内联对象需加*/
-				width:31em;/*指定宽度*/
-				word-break:keep-all;/* 不换行 */
-				white-space:nowrap;/* 强制在同一行内显示所有文本，直到文本结束或者遭遇 br 对象。不换行 */
-				overflow:hidden;/* 内容超出宽度时隐藏超出部分的内容 */
-				text-overflow:ellipsis;/* IE 专有属性，当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
-			}
+<head>
+    <meta charset="UTF-8">
+    <title>测试成绩管理</title>
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="../../static/css/layui.css" media="all">
+    <link rel="stylesheet" type="text/css" href="../../static/css/page.css"/>
+    <link rel="stylesheet" type="text/css" href="../../static/css/code.css"/>
+    <link rel="stylesheet" type="text/css" href="../../static/css/bootstrap.min.css"/>
+    <style>
+        .layui-form-label {
+            width: 100px;
+        }
 
-			table{
-				width:30em;
-				table-layout:fixed;/* 只有定义了表格的布局算法为fixed，下面td的定义才能起作用。 */
-			}
-			td{
-				width:100%;
-				word-break:keep-all;/* 不换行 */
-				white-space:nowrap;/* 不换行 */
-				overflow:hidden;/* 内容超出宽度时隐藏超出部分的内容 */
-				text-overflow:ellipsis;/* 当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
-			}
+        .text-overflow {
+            display: block; /*内联对象需加*/
+            width: 31em; /*指定宽度*/
+            word-break: keep-all; /* 不换行 */
+            white-space: nowrap; /* 强制在同一行内显示所有文本，直到文本结束或者遭遇 br 对象。不换行 */
+            overflow: hidden; /* 内容超出宽度时隐藏超出部分的内容 */
+            text-overflow: ellipsis; /* IE 专有属性，当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
+        }
 
-			.ak{
-				margin-left: 0px;
-			}
-			.ab{
-				padding-top: 15px;
-			}
+        table {
+            width: 30em;
+            table-layout: fixed; /* 只有定义了表格的布局算法为fixed，下面td的定义才能起作用。 */
+        }
 
-			.layui-table th {
-				text-align: center;
-				font-weight: 900;
-			}
+        td {
+            width: 100%;
+            word-break: keep-all; /* 不换行 */
+            white-space: nowrap; /* 不换行 */
+            overflow: hidden; /* 内容超出宽度时隐藏超出部分的内容 */
+            text-overflow: ellipsis; /* 当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
+        }
 
-			.top1 th {
-				text-align: center;
-				font-weight: 500;
-			}
-			.top1 .layui-form-label{
-				font-weight: 900;
-			}
-			.top1{
-				width: 90%;
-				margin: 0 auto;
-			}
-		</style>
-	</head>
+        .ak {
+            margin-left: 0px;
+        }
 
+        .ab {
+            padding-top: 15px;
+        }
 
-	<body>
-		<div class="layui-container">
-<!--			<img src="../../static/images/LOGO2.png"> <br><br>-->
-<!--			<span class="layui-breadcrumb">-->
-<!--  			<a href="/">首页</a>-->
-<!--  			&lt;!&ndash;<a href="/demo/">轮播公告</a>&ndash;&gt;-->
-<!--  			<a><cite>测试成绩管理</cite></a>-->
-<!--			</span> <br><br><br>-->
+        .layui-table th {
+            text-align: center;
+            font-weight: 900;
+        }
+
+        .top1 th {
+            text-align: center;
+            font-weight: 500;
+        }
+
+        .top1 .layui-form-label {
+            font-weight: 900;
+        }
+
+        .top1 {
+            width: 90%;
+            margin: 0 auto;
+        }
+    </style>
+</head>
 
 
-			<table class="layui-table top1" lay-size="lg" style="    text-align: center;">
-<!--				<colgroup>-->
-<!--					<col width="150">-->
-<!--					<col width="200">-->
-<!--					<col>-->
-<!--				</colgroup>-->
+<body>
+<div class="layui-container">
 
-					<tr>
-						<th colspan="2" style="padding: 0">
-<!--							<div class="layui-form">-->
-								<div class="layui-form-item">
-									<label class="layui-form-label ab">班级筛选</label>
-									<div class="layui-input-block" style="width: 30%;">
-<!--										<select name="interest" lay-filter="aihao">-->
-<!--											&lt;!&ndash;<option value=""></option>&ndash;&gt;-->
-<!--											<option value="0" selected="">18信管01</option>-->
-<!--											<option value="1">18信管02</option>-->
-<!--											<option value="2">18信管03</option>-->
-<!--											<option value="3">18数媒01</option>-->
-<!--											<option value="4">18数媒02</option>-->
-<!--										</select>-->
-										<select name="interest" lay-filter="aihao" onchange="window.open(this.options[this.selectedIndex].value,target='_self')" style="margin-top: 13px;">
-											<option>请选择</option>
-											<div th:each="clazz:${classList}" >
-												<option th:value="|/lastTestScoreManage/${clazz.getClassId()}/list|"  th:text="${clazz.getClassName()}">18信管01</option>
-											</div>
-										</select>
+    <table class="layui-table top1" lay-size="lg" style="    text-align: center;">
+        <tr>
+            <th colspan="2" style="padding: 0">
+                <!--							<div class="layui-form">-->
+                <div class="layui-form-item">
+                    <label class="layui-form-label ab">课程班级筛选</label>
+                    <div class="layui-input-block" style="width: 30%;">
+                        <select name="interest" lay-filter="aihao"
+                                onchange="window.open(this.options[this.selectedIndex].value,target='_self')"
+                                style="margin-top: 13px;">
+                            <option th:value="|/lastTestScoreManage/report/-1|">--请选择--</option>
+                            <div th:each="arrangeInfo:${arrangeInfoDTOs}">
+                                <option th:value="|/lastTestScoreManage/report/${arrangeInfo.getArrangeId()}|"
+                                        th:text="${arrangeInfo.getCourseName()+'-'+arrangeInfo.getClassName()}"
+                                        th:if="${arrangeInfo.getArrangeId() ne selected}">18信管01
+                                </option>
+                                <option th:value="|/lastTestScoreManage/report/${arrangeInfo.getArrangeId()}|"
+                                        th:text="${arrangeInfo.getCourseName()+'-'+arrangeInfo.getClassName()}"
+                                        selected="selected" th:if="${arrangeInfo.getArrangeId() eq selected}">18信管01
+                                </option>
+                            </div>
+                        </select>
+                    </div>
 
+                    <!--								</div>-->
 
-									</div>
+                </div>
+            </th>
 
-<!--								</div>-->
+            <th colspan="2" style="padding: 0">
 
-							</div>
-						</th>
+                <!--							<li>-->
+                <!--								<div class="layui-input-block" style="float: left; position: relative;">-->
+                <!--									<label class="layui-form-label">学号搜索</label>-->
+                <!--									<input style="width: auto;" type="text" id="select_orderId" name="select_orderId" lay-verify="required" placeholder="请输入学号" autocomplete="off" class="layui-input">-->
+                <!--								</div>-->
+                <!--								<button class="layui-btn" lay-submit="" id="searchBtn" data-type="getInfo" style="float: left;">搜索</button>-->
+                <!--								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
+                <!--								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
+                <!--								<button type="导出" class="layui-btn" lay-submit="" lay-filter="demo1">导出</button>-->
+                <!--							</li>-->
 
-						<th colspan="2" style="padding: 0">
+                <!--							<form th:action="@{/lastTestScoreManage/list}">-->
+                <!--								<li>-->
+                <!--									<div class="layui-input-block ak" style="float: left; position: relative;">-->
+                <!--										<label class="layui-form-label">学号搜索</label>-->
+                <!--										<input style="width: auto;" type="text"  th:value="${select_orderId}" id="select_orderId" name="select_orderId" lay-verify="required" placeholder="请输入学号" autocomplete="off" class="layui-input">-->
+                <!--									</div>-->
+                <!--									<button class="layui-btn" lay-submit="" id="searchBtn" data-type="getInfo" style="float: left;">搜索</button>-->
 
-<!--							<li>-->
-<!--								<div class="layui-input-block" style="float: left; position: relative;">-->
-<!--									<label class="layui-form-label">学号搜索</label>-->
-<!--									<input style="width: auto;" type="text" id="select_orderId" name="select_orderId" lay-verify="required" placeholder="请输入学号" autocomplete="off" class="layui-input">-->
-<!--								</div>-->
-<!--								<button class="layui-btn" lay-submit="" id="searchBtn" data-type="getInfo" style="float: left;">搜索</button>-->
-<!--								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-<!--								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-<!--								<button type="导出" class="layui-btn" lay-submit="" lay-filter="demo1">导出</button>-->
-<!--							</li>-->
+                <!--								</li>-->
 
-							<form th:action="@{/lastTestScoreManage/list}">
-								<li>
-									<div class="layui-input-block ak" style="float: left; position: relative;">
-										<label class="layui-form-label">学号搜索</label>
-										<input style="width: auto;" type="text"  th:value="${select_orderId}" id="select_orderId" name="select_orderId" lay-verify="required" placeholder="请输入学号" autocomplete="off" class="layui-input">
-									</div>
-									<button class="layui-btn" lay-submit="" id="searchBtn" data-type="getInfo" style="float: left;">搜索</button>
+                <!--							</form>-->
 
-								</li>
-
-							</form>
-
-						</th>
-					</tr>
-			</table>
-			<table class="layui-table" lay-size="lg" style="    text-align: center;">
-				<thead>
-					<tr>
-						<th>学号</th>
-						<th>姓名</th>
-						<th>班级</th>
-						<th >整体测试成绩</th>
-					</tr>
-				</thead>
-				<tbody>
-<!--					<tr th:each="a:${allInfo}">-->
-<!--						<td th:text="${a.getXuehao()}">12345678</td>-->
-<!--						<td th:text="${a.getsName()}">张三</td>-->
-<!--						<td th:text="${a.getsClassName()}">18信管01</td>-->
-<!--						<td th:text="${a.getmScore()}">86</td>-->
-<!--					</tr>-->
+            </th>
+        </tr>
+    </table>
+    <table class="layui-table" lay-size="lg" style="    text-align: center;" th:if="${Choose} ">
+        <thead>
+        <tr>
+            <th>学号</th>
+            <th>姓名</th>
+            <th>班级</th>
+            <th>整体测试成绩</th>
+        </tr>
+        </thead>
+        <tbody>
+        <!--					<tr th:each="a:${allInfo}">-->
+        <!--						<td th:text="${a.getXuehao()}">12345678</td>-->
+        <!--						<td th:text="${a.getsName()}">张三</td>-->
+        <!--						<td th:text="${a.getsClassName()}">18信管01</td>-->
+        <!--						<td th:text="${a.getmScore()}">86</td>-->
+        <!--					</tr>-->
 
 
-					<div th:each="class:${classList}">
-						<tr th:each="one:${allStu}" th:if="${one.getClassId()} == ${class.getClassId()}">
-							<td ><p th:text="${one.getStuXuehao()}" style="margin-left: -50%;">12345678</p></td>
-							<td ><p th:text="${one.getStuName()}">12345678</p></td>
-							<td ><p th:text="${one.getClassId()}">12345678</p></td>
-							<div th:each="stuInfo,stat:${allInfo}" th:if="${stuInfo.getXuehao()} == ${one.getStuXuehao()}">
+        <div th:each="class:${classList}">
+            <tr th:each="one:${allStu}" th:if="${one.getClassId()} == ${class.getClassId()}">
+                <td><p th:text="${one.getStuXuehao()}" style="margin-left: -50%;">12345678</p></td>
+                <td><p th:text="${one.getStuName()}">12345678</p></td>
+                <td><p th:text="${one.getClassId()}">12345678</p></td>
+                <div th:each="stuInfo,stat:${allInfo}" th:if="${stuInfo.getXuehao()} == ${one.getStuXuehao()}">
 
-								<td th:if="${stat.index >= 0}" ><p th:text="${stuInfo.getmScore()}">12345678</p></td>
-
-
-							</div>
-						</tr>
-					</div>
-				</tbody>
+                    <td th:if="${stat.index >= 0}"><p th:text="${stuInfo.getmScore()}">12345678</p></td>
 
 
-			</table>
-		</div>
-		<div style="text-align: center;">
-<!--			<div id="pager" class="pager clearfix">-->
-<!--			</div>-->
-			<div class="modal-footer no-margin-top">
-				<ul class="pagination pull-right no-margin">
-
-					<!-- 首页 -->
-					<li>
-						<a th:href="'/lastTestScoreManage/list?pageNum=0'">首页</a>
-					</li>
-
-					<!-- 上一页 -->
-					<li th:if="${allInfo.hasPrevious()}">
-						<a th:href="'/lastTestScoreManage/list?pageNum=' + ${allInfo.previousPageable().getPageNumber()}" th:text="上一页"></a>
-					</li>
-
-					<!-- 中间页 -->
-					<li th:each="pageNum:${#numbers.sequence(0, allInfo.getTotalPages() - 1)}">
-						<a th:href="'/lastTestScoreManage/list?pageNum=' + ${pageNum}" th:text="${pageNum + 1}" th:if="${pageNum ne allInfo.pageable.getPageNumber()}"></a>
-						<a th:href="'/lastTestScoreManage/list?pageNum=' + ${pageNum}" th:text="${pageNum + 1}" th:if="${pageNum eq allInfo.pageable.getPageNumber()}" th:style="'font-weight:bold;background: #6faed9;'"></a>
-					</li>
-
-					<!-- 下一页 -->
-					<li th:if="${allInfo.hasNext()}">
-						<a th:href="'/lastTestScoreManage/list?pageNum=' + ${allInfo.nextPageable().getPageNumber()}" th:text="下一页"></a>
-					</li>
-
-					<!-- 尾页 -->
-					<li>
-						<a th:href="'/lastTestScoreManage/list?pageNum=' + ${allInfo.getTotalPages() - 1}">尾页</a>
-					</li>
-
-				</ul>
-			</div>
-		</div>
+                </div>
+            </tr>
+        </div>
+        </tbody>
 
 
-		<script type="text/javascript" src="../../static/js/layui.all.js" ></script>
-		<!--<script src="js/layui.js" type="text/javascript" charset="utf-8"></script>-->
-		<script src="../../static/js/vue.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../static/js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../static/js/jquery.z-pager.js" type="text/javascript" charset="utf-8"></script>
+    </table>
+</div>
+<div style="text-align: center;" th:if="${ Choose}">
+    <!--			<div id="pager" class="pager clearfix">-->
+    <!--			</div>-->
+    <div class="modal-footer no-margin-top">
+        <ul class="pagination pull-right no-margin">
 
-		<script type="text/javascript">
+            <!-- 首页 -->
+            <li>
+                <a th:href="'/lastTestScoreManage/list?pageNum=0'">首页</a>
+            </li>
+
+            <!-- 上一页 -->
+            <li th:if="${allInfo.hasPrevious()}">
+                <a th:href="'/lastTestScoreManage/list?pageNum=' + ${allInfo.previousPageable().getPageNumber()}"
+                   th:text="上一页"></a>
+            </li>
+
+            <!-- 中间页 -->
+            <li th:each="pageNum:${#numbers.sequence(0, allInfo.getTotalPages() - 1)}">
+                <a th:href="'/lastTestScoreManage/list?pageNum=' + ${pageNum}" th:text="${pageNum + 1}"
+                   th:if="${pageNum ne allInfo.pageable.getPageNumber()}"></a>
+                <a th:href="'/lastTestScoreManage/list?pageNum=' + ${pageNum}" th:text="${pageNum + 1}"
+                   th:if="${pageNum eq allInfo.pageable.getPageNumber()}"
+                   th:style="'font-weight:bold;background: #6faed9;'"></a>
+            </li>
+
+            <!-- 下一页 -->
+            <li th:if="${allInfo.hasNext()}">
+                <a th:href="'/lastTestScoreManage/list?pageNum=' + ${allInfo.nextPageable().getPageNumber()}"
+                   th:text="下一页"></a>
+            </li>
+
+            <!-- 尾页 -->
+            <li>
+                <a th:href="'/lastTestScoreManage/list?pageNum=' + ${allInfo.getTotalPages() - 1}">尾页</a>
+            </li>
+
+        </ul>
+    </div>
+</div>
 
 
+<script type="text/javascript" src="../../static/js/layui.all.js"></script>
+<!--<script src="js/layui.js" type="text/javascript" charset="utf-8"></script>-->
+<script src="../../static/js/vue.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../static/js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../static/js/jquery.z-pager.js" type="text/javascript" charset="utf-8"></script>
 
-			$("#pager").zPager({
-				totalData: 50,
-				htmlBox: $('#wraper'),
-				btnShow: true,
-				ajaxSetData: false
-			});
+<script type="text/javascript">
 
-			function currentPage(currentPage) {
-				/*
-					触发页码数位置： Page/js/jquery.z-pager.js 64行
-				*/
-				console.log("当前页码数：" + currentPage);
-			}
-		</script>
 
-  <script>
+    $("#pager").zPager({
+        totalData: 50,
+        htmlBox: $('#wraper'),
+        btnShow: true,
+        ajaxSetData: false
+    });
 
-    </script>
-	</body>
+    function currentPage(currentPage) {
+        /*
+            触发页码数位置： Page/js/jquery.z-pager.js 64行
+        */
+        console.log("当前页码数：" + currentPage);
+    }
+</script>
+
+<script>
+
+</script>
+</body>
 
 </html>
