--- a/src/main/resources/templates/shiyan/addLastTest.html
+++ b/src/main/resources/templates/shiyan/addLastTest.html
@@ -119,7 +119,7 @@
                 <div class="layui-input-block">
                     <a href="lookTest.html" th:href="@{|/shiyan/lastTestList|}" class="layui-btn layui-btn-primary">返回</a>
                     <button class="layui-btn" lay-submit lay-filter="formDemo">添加题目</button>
-                    <a href="lookTest.html" th:href="@{|/shiyan/lastTestList|}" class="layui-btn layui-bg-green">添加完成</a>
+                    <a href="lookTest.html" th:href="@{|/shiyan/lastTestList/${mId*-1}|}" class="layui-btn layui-bg-green">添加完成</a>
                 </div>
             </div>
 
