--- a/src/main/resources/templates/student/class_add.html
+++ b/src/main/resources/templates/student/class_add.html
@@ -1,105 +1,90 @@
 <!DOCTYPE html>
 <html class="x-admin-sm" xmlns:th="http://www.thymeleaf.org">
-    
-    <head>
-        <meta charset="UTF-8">
-        <title>欢实验模块设置</title>
-        <meta name="renderer" content="webkit">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-        <link rel="stylesheet" href="../../static/css/font.css">
-        <link rel="stylesheet" href="../../static/css/xadmin.css">
-        <link rel="stylesheet" href="../../static/css/layui.css">
-        <script type="text/javascript" src="../../static/js/layui.js" charset="utf-8"></script>
-        <script type="text/javascript" src="../../static/js/xadmin.js"></script>
-        <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
-
-    </head>
-    <body>
-        <div class="layui-fluid">
-            <div class="layui-row">
-                <form class="layui-form"  th:action="@{/studentManage/addClass}" method="post">
-                    <div class="layui-form-item">
-                    	
-                        <label for="L_email" class="layui-form-label">
-                            <span class="x-red">*</span>学院</label>
-                        <div class="layui-input-inline">
-                            <input type="text" id="L_email" name="class_collage" required="" lay-verify="nickname" autocomplete="off" class="layui-input"></div>
-                        </div>
-                    <div class="layui-form-item">
-                        <label  class="layui-form-label">
-                            <span class="x-red">*</span>专业</label>
-                        <div class="layui-input-inline">
-                            <input type="text" id="L_username" name="class_major"  required="" lay-verify="nikename" autocomplete="off" class="layui-input"></div>
-                    </div>
-                    <div class="layui-form-item">
-                        <label for="L_pass" class="layui-form-label">
-                            <span class="x-red">*</span>年级</label>
-                        <div class="layui-input-inline">
-                            <input type="text" id="L_pass"  name="class_grade" required="" lay-verify="pass" autocomplete="off" class="layui-input"></div>
-                        </div>
-                    <div class="layui-form-item">
-                        <label for="L_repass" class="layui-form-label">
-                            <span class="x-red">*</span>班级名</label>
-                        <div class="layui-input-inline">
-                            <input type="text" id="L_repass"  name="class_name" required="" lay-verify="repass" autocomplete="off" class="layui-input"></div>
-                    </div>
-                    <div class="layui-form-item">
-                        <label for="L_username" class="layui-form-label">
-                            <span class="x-red">*</span>负责教师名</label>
-                        <div class="layui-input-inline">
-                            <input type="text"  name="class_teacher"  required="" lay-verify="nikename" autocomplete="off" class="layui-input"></div>
-                    </div>
-                    <div class="layui-form-item" style="visibility: hidden">
-                        <label class="layui-form-label">是否往期</label>
-                        <div class="layui-input-block">
-                            <input type="radio" name="class_iscurrent" value='0' title="否">
-                            <input type="radio" name="class_iscurrent" value='1' title="是">
-                        </div>
-
-
-                    </div>
-
-                    <div class="layui-form-item">
-                        <label for="L_repass" class="layui-form-label"></label>
-                        <input class="layui-btn" lay-filter="add" lay-submit="" type="submit"/>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
-        <script>layui.use(['form', 'layer','jquery','form'],
-            function() {
-                $ = layui.jquery;
-                var form = layui.form,
-                layer = layui.layer;
-
-                //自定义验证规则
-                form.verify({
-                    nikename: function(value) {
-                        if (value.length < 1) {
-                            return '请重新填写';
-                        }
-                    },
-                    pass: function(value) {
-                        if (value.length < 1) {
-                            return '请重新填写';
-                        }
-                    },
-                    repass: function(value) {
-                        if (value.length < 1) {
-                            return '请重新填写';
-                        }
-                       }
-                });
-
-            });</script>
-        <script>var _hmt = _hmt || []; (function() {
-                var hm = document.createElement("script");
-                hm.src = "https://hm.baidu.com/hm.js?b393d153aeb26b46e9431fabaf0f6190";
-                var s = document.getElementsByTagName("script")[0];
-                s.parentNode.insertBefore(hm, s);
-            })();</script>
-    </body>
-
+	<head>
+		<meta charset="UTF-8" />
+		<title>欢实验模块设置</title>
+		<meta name="renderer" content="webkit" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
+		<link rel="stylesheet" href="../../static/css/font.css" />
+		<link rel="stylesheet" href="../../static/css/xadmin.css" />
+		<link rel="stylesheet" href="../../static/css/layui.css" />
+		<script type="text/javascript" src="../../static/js/layui.js" charset="utf-8"></script>
+		<script type="text/javascript" src="../../static/js/xadmin.js"></script>
+		<!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
+	</head>
+	<body style="background: #fff;">
+		<div class="layui-fluid" style="padding-top: 20px;">
+			<div class="layui-row">
+				<form class="layui-form" th:action="@{/studentManage/addClass}" method="post">
+					<div class="layui-form-item">
+						<label for="L_email" class="layui-form-label"> <span class="x-red">*</span>学院</label>
+						<div class="layui-input-inline">
+							<input type="text" id="L_email" name="class_collage" required="" lay-verify="nickname" autocomplete="off" class="layui-input" />
+						</div>
+					</div>
+					<div class="layui-form-item">
+						<label class="layui-form-label"> <span class="x-red">*</span>专业</label>
+						<div class="layui-input-inline">
+							<input type="text" id="L_username" name="class_major" required="" lay-verify="nikename" autocomplete="off" class="layui-input" />
+						</div>
+					</div>
+					<div class="layui-form-item">
+						<label for="L_pass" class="layui-form-label"> <span class="x-red">*</span>年级</label>
+						<div class="layui-input-inline">
+							<input type="text" id="L_pass" name="class_grade" required="" lay-verify="pass" autocomplete="off" class="layui-input" />
+						</div>
+					</div>
+					<div class="layui-form-item">
+						<label for="L_repass" class="layui-form-label"> <span class="x-red">*</span>班级名</label>
+						<div class="layui-input-inline">
+							<input type="text" id="L_repass" name="class_name" required="" lay-verify="repass" autocomplete="off" class="layui-input" />
+						</div>
+					</div>
+					<div class="layui-form-item">
+						<label for="L_username" class="layui-form-label"> <span class="x-red">*</span>负责教师名</label>
+						<div class="layui-input-inline">
+							<input type="text" name="class_teacher" required="" lay-verify="nikename" autocomplete="off" class="layui-input" />
+						</div>
+					</div>
+					<div class="layui-form-item" style="visibility: hidden; margin: 0; overflow: hidden;">
+						<label class="layui-form-label">是否往期</label>
+						<div class="layui-input-block">
+							<input type="radio" name="class_iscurrent" value="0" title="否" />
+							<input type="radio" name="class_iscurrent" value="1" title="是" />
+						</div>
+					</div>
+					<div class="layui-form-item">
+						<label for="L_repass" class="layui-form-label"></label>
+						<input class="layui-btn" lay-filter="add" lay-submit="" type="submit" />
+					</div>
+				</form>
+			</div>
+		</div>
+		<script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
+		<script>
+			layui.use(['form', 'layer', 'jquery', 'form'], function () {
+				$ = layui.jquery
+				var form = layui.form,
+					layer = layui.layer
+				form.verify({
+					nikename: function (value) {
+						if (value.length < 1) {
+							return '请重新填写'
+						}
+					},
+					pass: function (value) {
+						if (value.length < 1) {
+							return '请重新填写'
+						}
+					},
+					repass: function (value) {
+						if (value.length < 1) {
+							return '请重新填写'
+						}
+					}
+				})
+			})
+		</script>
+	</body>
 </html>
