--- a/src/main/resources/templates/student/class_administer.html
+++ b/src/main/resources/templates/student/class_administer.html
@@ -1,116 +1,135 @@
 <!DOCTYPE html>
-<html class="x-admin-sm"  xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <meta charset="UTF-8">
-        <title>实验模块设置</title>
-        <meta name="renderer" content="webkit">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-        <link rel="stylesheet" href="../../static/css/font.css">
-        <link rel="stylesheet" href="../../static/css/xadmin.css">
-        <link rel="stylesheet" href="../../static/css/layui.css">
-        <script src="../../static/js/layui.js" charset="utf-8"></script>
-        <script type="text/javascript" src="../../static/js/xadmin.js"></script>
-        <style>
-            .layui-table th {
-                text-align: center;
-                font-weight: 900;
-            }
-            .layui-table td {
-                text-align: center;
-
-            }
-        </style>
-    </head>
-    <body>
-        <div class="x-nav">
-          <span class="layui-breadcrumb">
-            <a href="">首页</a>
-            <a href="">学生管理</a>
-            <a>
-              <cite>班级管理</cite></a>
-          </span>
-          <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right" onclick="location.reload()" title="刷新">
-            <i class="layui-icon layui-icon-refresh" style="line-height:30px"></i></a>
-        </div>
-        <div class="layui-fluid">
-            <div class="layui-row layui-col-space15">
-                <div class="layui-col-md12">
-                    <div class="layui-card">
-                        <div class="layui-card-body ">
-                            <form class="layui-form layui-col-space5" th:action="@{/studentManage/viewClass}">
-                                <div class="layui-inline layui-show-xs-block">
-                                    <input type="text" name="class_name"  placeholder="请输入班级名称" autocomplete="off" required="required" class="layui-input">
-                                </div>
-                                <div class="layui-inline layui-show-xs-block">
-                                    <input class="layui-btn" type="submit" lay-submit="" lay-filter="sreach" value="搜索"/>
-                                </div>
-                            </form>
-                            <div class="layui-inline" style="margin-top: -22px;float: right;">
-                                <a class="layui-btn" th:href="@{/studentManage/toAddClass}">添加班级</a>
-                            </div>
-                        </div>
-                       
-                        <div class="layui-card-body ">
-                            <table class="layui-table layui-form">
-                                <thead>
-                                  <tr>
-                                    <th width="3%">ID</th>
-                                    <th>学院</th>
-                                    <th>专业</th>
-                                    <th width="3%">年级</th>
-                                    <th width="3%">班级</th>
-                                    <th width="3%">负责老师</th>
-                                    <th width="3%">是否往期</th>
-                                    <th>操作</th>
-                                </thead>
-                                <tbody>
-                                  <tr th:each="c:${classMsg}">
-                                    <td th:text="${c.classId}"></td>
-                                    <td th:text="${c.classCollage}"></td>
-                                    <td th:text="${c.classMajor}"></td>
-                                    <td th:text="${c.classGrade}"></td>
-                                    <td th:text="${c.className}"></td>
-                                    <td th:text="${c.classTeacher}"></td>
-                                    <td th:text="${c.classIscurrent == true?'是':'否'}"></td>
-                                    <td class="td-manage">
-                                        <span th:if="${c.classIscurrent == false}">
-                                            <a title="" class="layui-btn" th:href="@{|/studentManage/toEditClass/${c.classId}|}">编辑</a>
-                                        </span>
-                                      <a title="" class="layui-btn" th:href="@{|/studentManage/addStudent/${c.classId}|}">管理学生</a>
-                                      <button  class="layui-btn" type="button" th:name="${c.classId}" onclick="del(this)">
-                                          删除
-                                      </button>
-                                    </td>
-                                  </tr>
-                                </tbody>
-                              </table>
-                        </div>
-                        <div class="layui-card-body ">
-                            <div class="page">
-                                <div>
-                                    <a class="prev" th:href="@{/studentManage/classManage(pageNum=${classMsg.hasPrevious()}?${classMsg.number}-1:0)}">&lt;&lt;</a>
-                                    <a class="next" th:href="@{/studentManage/classManage(pageNum=${classMsg.hasNext()}?${classMsg.number}+1:${classMsg.number})}">&gt;&gt;</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> 
-    </body>
-    <script src="../../static/js/jquery-3.4.1.min.js" type="text/javascript" charset="utf-8"></script>
-    <script>
-
-        function del(obj) {
-            var id = obj.name;
-            var ques = confirm("确定要删除该班级吗？")
-            if(ques == true){
-                $.get("/studentManage/deleteClass/"+id,function () {
-                    location.reload()
-                })
-            }
-        }
-
-    </script>
+<html class="x-admin-sm" xmlns:th="http://www.thymeleaf.org">
+	<head>
+		<meta charset="UTF-8" />
+		<title>实验模块设置</title>
+		<meta name="renderer" content="webkit" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
+		<link rel="stylesheet" href="../../static/new/css/reset.css" />
+		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
+		<style>
+			body {
+				padding: 20px;
+				background: #f2f2f2;
+				box-sizing: border-box;
+			}
+			.layui-fluid {
+				padding: 0;
+			}
+			.search-bar {
+				margin: 0 0 10px 0;
+				background: #fff;
+				padding: 10px;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="layui-fluid">
+			<form class="layui-form search-bar" th:action="@{/studentManage/viewClass}" method="get">
+				<div class="layui-input-inline">
+					<input type="text" name="class_name" placeholder="请输入班级名称" autocomplete="off" class="layui-input" />
+				</div>
+				<div class="layui-input-inline">
+					<button type="submit" class="layui-btn" lay-submit>搜索</button>
+				</div>
+				<div class="layui-input-inline">
+					<a type="button" class="layui-btn addBtn" th:data-url="@{/studentManage/toAddClass}">添加班级</a>
+				</div>
+			</form>
+			<div class="layui-row layui-col-space15">
+				<div class="layui-col-md12">
+					<div class="layui-card">
+						<div class="layui-card-body">
+							<table class="layui-table layui-form">
+								<thead>
+									<tr>
+										<th>ID</th>
+										<th>学院</th>
+										<th>专业</th>
+										<th>年级</th>
+										<th>班级</th>
+										<th>负责老师</th>
+										<th>是否往期</th>
+										<th>操作</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr th:each="c:${classMsg}">
+										<td th:text="${c.classId}"></td>
+										<td th:text="${c.classCollage}"></td>
+										<td th:text="${c.classMajor}"></td>
+										<td th:text="${c.classGrade}"></td>
+										<td th:text="${c.className}"></td>
+										<td th:text="${c.classTeacher}"></td>
+										<td th:text="${c.classIscurrent == true?'是':'否'}"></td>
+										<td class="td-manage">
+											<button type="button" th:if="${c.classIscurrent == false}" class="layui-btn layui-btn-sm editBtn" th:data-url="@{|/studentManage/toEditClass/${c.classId}|}">编辑</button>
+											<a class="layui-btn layui-btn-sm" th:href="@{|/studentManage/addStudent/${c.classId}|}">管理学生</a>
+											<button type="button" class="layui-btn layui-btn-sm delBtn" th:data-id="${c.classId}">删除</button>
+										</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+						<div id="pager" style="text-align: center;"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
+	<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+	<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+	<script>
+		$(function () {
+			var layer = layui.layer,
+				laypage = layui.laypage
+			laypage.render({
+				elem: 'pager',
+				layout: ['count', 'prev', 'page', 'next'],
+				curr: parseInt('[[${classMsg.number}]]') + 1,
+				count: parseInt('[[${classMsg.totalElements}]]'),
+				jump: function (obj, first) {
+					if (!first) {
+						window.location.href = window.location.origin + window.location.pathname + '?pageNum=' + (obj.curr - 1)
+					}
+				}
+			})
+			$('.addBtn').click(function (e) {
+				e.preventDefault()
+				var _url = $(this).data('url')
+				layer.open({
+					title: '添加',
+					type: 2,
+					area: ['500px', '500px'],
+					content: _url
+				})
+			})
+			$('.editBtn').click(function (e) {
+				e.preventDefault()
+				var _url = $(this).data('url')
+				layer.open({
+					title: '编辑',
+					type: 2,
+					area: ['500px', '500px'],
+					content: _url
+				})
+			})
+			$('.delBtn').click(function (e) {
+				e.preventDefault()
+				var _id = $(this).data('id')
+				layer.confirm(
+					'确定要删除该班级吗？',
+					{
+						btn: ['确定', '取消']
+					},
+					function () {
+						$.get('/studentManage/deleteClass/' + _id, function () {
+							location.reload()
+						})
+					}
+				)
+			})
+		})
+	</script>
 </html>
